# Backup-desktop-app

./: Cargo.toml  README.md  build.rs  build_release.bat  build_release.sh  build_release_m.sh  macos_build_release.sh  win_build_release.bat
release/linux/: Group13  uninstall
release/macos/: Group13  launcher_backup  uninstall
src/: app.rs  config.rs  events.rs  fs_copy.rs  lib.rs  main.rs  mouse_lib.rs  mouse_tracker.rs  popup.rs  sound.rs
